<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:id="@+id/left_drawer_scroll"
        android:layout_gravity="start"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:background="#ffffff"
        >

        <!-- The navigation drawer -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/left_drawer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:divider="?android:listDivider"
            android:showDividers="middle">

            <RelativeLayout
                android:id="@+id/home_avatar_cont"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_avatar_height_collapsed"
                android:clickable="true"
                android:background="#333333">

                <ImageView
                    android:id="@+id/home_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_avatar_height_collapsed"
                    android:src="@drawable/avatar"
                    android:scaleType="centerCrop" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/home_avatar_height_collapsed"
                    android:background="@drawable/gradient_overlay" />

                <LinearLayout
                    android:id="@+id/home_about_cont"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="126dp">

                    <TextView
                        style="@style/OverlayTextStyle"
                        android:id="@+id/nav_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMediumInverse"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/nav_title"
                        android:paddingLeft="4dp"
                        android:paddingTop="4dp"
                        android:paddingRight="4dp" />

                    <TextView
                        style="@style/OverlayTextStyle"
                        android:id="@+id/nav_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceSmallInverse"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/about_text"
                        android:layout_marginTop="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="bottom">

                        <TextView
                            style="@style/OverlayTextStyle"
                            android:id="@+id/nav_more"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentBottom="true"
                            android:textAppearance="?android:textAppearanceSmallInverse"
                            android:fontFamily="sans-serif-light"
                            android:textSize="12sp"
                            android:textAllCaps="true"
                            android:text="@string/nav_more_collapsed"
                            android:paddingLeft="5dp"
                            android:paddingBottom="8dp" />

                        <ImageView
                            android:id="@+id/nav_more_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/expander_open_holo_dark"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <TextView
                style="@style/NavigationListItemStyle"
                android:id="@+id/nav_home"
                android:text="@string/nav_home"
                android:onClick="onNavigationItemClicked" />

            <TextView
                style="@style/NavigationListItemStyle"
                android:id="@+id/nav_projects"
                android:drawableRight="@drawable/expander_open_holo_light"
                android:text="@string/nav_projects"
                android:onClick="onNavigationItemClicked" />

            <TextView
                style="@style/NavigationListItemStyle.Child"
                android:id="@+id/nav_family"
                android:text="@string/nav_family"
                android:onClick="onNavigationItemClicked"
                android:visibility="gone" />

            <TextView
                style="@style/NavigationListItemStyle.Child"
                android:id="@+id/nav_weddings"
                android:text="@string/nav_weddings"
                android:onClick="onNavigationItemClicked"
                android:visibility="gone" />

            <TextView
                style="@style/NavigationListItemStyle.Child"
                android:id="@+id/nav_children"
                android:text="@string/nav_children"
                android:onClick="onNavigationItemClicked"
                android:visibility="gone" />

            <TextView
                style="@style/NavigationListItemStyle.Child"
                android:id="@+id/nav_babies"
                android:text="@string/nav_babies"
                android:onClick="onNavigationItemClicked"
                android:visibility="gone" />

            <TextView
                style="@style/NavigationListItemStyle"
                android:id="@+id/nav_contact"
                android:text="@string/nav_contact"
                android:onClick="onNavigationItemClicked" />

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.DrawerLayout>