<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="10"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/form_field_padding"
        android:paddingRight="@dimen/form_field_padding">

        <EditText
            android:id="@+id/contact_first_name"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/contact_last_name"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <Space
            android:layout_height="wrap_content"
            android:layout_width="8dp" />

        <EditText
            android:id="@id/contact_last_name"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/form_label_padding"
        android:paddingRight="@dimen/form_label_padding">

        <TextView
            style="@style/FormTextStyle"
            android:text="@string/contact_first_name"
            android:layout_gravity="left|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Space
            android:layout_height="wrap_content"
            android:layout_width="16dp" />

        <TextView
            style="@style/FormTextStyle"
            android:text="@string/contact_last_name"
            android:layout_gravity="left|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <EditText
        android:id="@+id/contact_email"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="@dimen/form_field_padding"
        android:layout_marginRight="@dimen/form_field_padding" />

    <TextView
        style="@style/FormTextStyle"
        android:text="@string/contact_email"
        android:layout_gravity="left|top"
        android:layout_marginLeft="@dimen/form_label_padding"
        android:layout_marginRight="@dimen/form_label_padding" />

    <EditText
        android:id="@+id/contact_subject"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:singleLine="true"
        android:inputType="textEmailSubject"
        android:layout_marginLeft="@dimen/form_field_padding"
        android:layout_marginRight="@dimen/form_field_padding" />

    <TextView
        style="@style/FormTextStyle"
        android:text="@string/contact_subject"
        android:layout_gravity="left|top"
        android:layout_marginLeft="@dimen/form_label_padding"
        android:layout_marginRight="@dimen/form_label_padding" />

    <EditText
        android:id="@+id/contact_message"
        android:layout_columnSpan="2"
        android:layout_rowSpan="2"
        android:layout_height="240dp"
        android:layout_gravity="fill"
        android:gravity="top|left"
        android:inputType="text"
        android:layout_marginLeft="@dimen/form_field_padding"
        android:layout_marginRight="@dimen/form_field_padding" />

    <TextView
        style="@style/FormTextStyle"
        android:text="@string/contact_message"
        android:layout_columnSpan="2"
        android:layout_gravity="left|top"
        android:layout_marginLeft="@dimen/form_label_padding"
        android:layout_marginRight="@dimen/form_label_padding" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="bottom|center"
        android:orientation="vertical"
        android:showDividers="beginning">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/contact_submit_btn"
            android:text="@string/contact_submit"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/FormTextStyle"
            android:textColor="?android:textColorPrimary" />

    </LinearLayout>

</GridLayout>